# dmgen4error

./: .travis.yml  CMakeLists.txt  README.md  build.bat  build.sh
ctemplate/: CMakeLists.txt
include/: dmstrtk.hpp  integer_to_string.hpp  pugixml.cpp  pugixml.hpp
src/: arg_parser.cpp  arg_parser.h  builderror.sh  buildtpl.sh  dmcmake_package_bin.h  dmerror_package_bin.h  dmgen.cpp  dmgen.h  strtk.hpp
src/tpl/: .travis.yml  CMakeLists.txt  README.md  build.sh  {{PROJECT_NAME}}_errorcode.h
src/tpl/test/: {{PROJECT_NAME}}_errorcode.h
test/error/: builderror.bat  builderror.sh
